#
# Copyright (C) 2024 Renesas Electronics Corporation.
# Copyright (C) 2024 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

set(TARGET aosmigration)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES migration.cpp)

# ######################################################################################################################
# Includes
# ######################################################################################################################

# ######################################################################################################################
# Target
# ######################################################################################################################

add_library(${TARGET} STATIC ${SOURCES})

# ######################################################################################################################
# Libraries
# ######################################################################################################################

target_link_libraries(${TARGET} PUBLIC aoscommon Poco::DataSQLite)

target_include_directories(${TARGET} PUBLIC ${PROJECT_SOURCE_DIR}/include)

# ######################################################################################################################
# Install
# ######################################################################################################################

install(TARGETS ${TARGET} DESTINATION lib)

install(
    DIRECTORY ${PROJECT_SOURCE_DIR}/include/migration
    DESTINATION include
    FILES_MATCHING
    PATTERN "*.hpp"
)
